src/frontend/tui/snapshots/illustrious_manager__frontend__tui__input_area__tests__render_wrapped_text.snap
---
source: src/frontend/tui/input_area.rs
expression: terminal.backend()
---
"┌Input (Enter to se┐"
"│abcdefghijklmnopqr│"
"│stuvwxyz0123456789│"
"└──────────────────┘"
"                    "
"                    "
"                    "
"                    "
"                    "
"                    "
"                    "
"                    "
"                    "
"                    "
"                    "
"                    "
"                    "
"                    "
"                    "
"                    "
